# 70016-cw

./: .gitignore  README.md  dev.txt  eda.ipynb  main.py  pyproject.toml  test.txt
BestModel/: training.ipynb
BestModel/BestModel/: model.safetensors
Experiments/Augmentation/: training.ipynb
Experiments/Augmentation/BestModel/: model.safetensors
Experiments/Oversampling/: training.ipynb
Experiments/Oversampling/BestModel/: model.safetensors
Experiments/RemoveStopwords/: training.ipynb
data/: task4_test.tsv
