[project]
name = "70016-cw"
version = "0.1.0"
description = "Imperial College London COMP70016 Coursework - Natural Language Processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.6.1",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "pandas>=3.0.1",
    "ruff>=0.15.4",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers[torch]>=5.2.0",
    "wordcloud>=1.9.6",
]
